- intermediate release - fixed bug in scal - added parameter nfbin in scal - added delay option to ccal

--- a/default.cfg
+++ b/default.cfg
@@ -13,11 +13,11 @@ finalsubdir = 'final'
 [PREFLAG]
 preflag_manualflag = True
 preflag_manualflag_fluxcal = True
-preflag_manualflag_polcal = True
+preflag_manualflag_polcal = False
 preflag_manualflag_target = True
 preflag_manualflag_auto = True
 preflag_manualflag_antenna = ''
-preflag_manualflag_corr = 'XY,YX,YY'
+preflag_manualflag_corr = ''
 preflag_manualflag_shadow = True
 preflag_manualflag_baseline = ''
 preflag_manualflag_channel = ''
@@ -25,10 +25,10 @@ preflag_manualflag_time = ''
 preflag_aoflagger = True
 preflag_aoflagger_bandpass = True
 preflag_aoflagger_fluxcal = True
-preflag_aoflagger_polcal = True
+preflag_aoflagger_polcal = False
 preflag_aoflagger_target = True
 preflag_aoflagger_fluxcalstrat = 'fluxcal_apertif_XX.rfis'
-preflag_aoflagger_polcalstrat = 'fluxcal_apertif_XX.rfis'
+preflag_aoflagger_polcalstrat = ''
 preflag_aoflagger_targetstrat = 'fluxcal_apertif_XX.rfis'
 
 [CONVERT]
@@ -42,9 +42,6 @@ convert_polcal = False
 convert_target = True
 
 [CROSSCAL]
-crosscal_mode = 'WSRT'
-crosscal_fringestop = False
-crosscal_fringestop_mode = 'direct'
 crosscal_applysys = False
 crosscal_bandpass = True
 crosscal_delay = True
@@ -83,6 +80,7 @@ selfcal_mode_standard_uvmax = [3000,3000,3000]
 selfcal_mode_standard_solint = [5,3,0.5]
 selfcal_mode_standard_amp = False
 selfcal_mode_standard_amp_auto_limit = 1.0
+selfcal_mode_standard_nfbin = 1
 selfcal_mode_manual_majorcycle = 3
 selfcal_mode_manual_minorcycle = [3,3,3]
 selfcal_mode_manual_uvmin = [0.0,0.0,0.0]
