- fixed bug in gains for sub_readmirlog - created subroutine for managing temporary directories (sub_managetmp.py) - overhauled Bandpass_stability.cfg parameters

--- a/ipython-notebooks/commissioning/APERTIF/Bandpass_stability.cfg
+++ b/ipython-notebooks/commissioning/APERTIF/Bandpass_stability.cfg
@@ -1,9 +1,9 @@
 [INITIAL]
 apercaldir = '/home/adebahr/apercal'
-fluxcal = '3C286.MS'
+fluxcal = '3C48.MS'
 polcal = ''
 target = ''
-basedir = '/data/adebahr/apertif/090808_3C286/'
+basedir = '/data/adebahr/apertif/100608_3C48/'
 rawsubdir = 'raw'
 crosscalsubdir = 'crosscal'
 selfcalsubdir = 'selfcal'
@@ -21,7 +21,7 @@ preflag_manualflag_corr = ''
 preflag_manualflag_shadow = True
 preflag_manualflag_baseline = ''
 preflag_manualflag_channel = ''
-preflag_manualflag_time = '19:45:0~21:00:0'
+preflag_manualflag_time = ''
 preflag_aoflagger = True
 preflag_aoflagger_bandpass = True
 preflag_aoflagger_fluxcal = True
@@ -42,11 +42,8 @@ convert_polcal = False
 convert_target = False
 
 [CROSSCAL]
-crosscal_mode = 'WSRT'
-crosscal_fringestop = False
-crosscal_fringestop_mode = 'direct'
 crosscal_applysys = False
 crosscal_bandpass = True
-crosscal_delay = False
+crosscal_delay = True
 crosscal_polarisation = False
 crosscal_transfer_to_target = False
