- added option to flag antennas during selfcal - added option to image only a certain channel range for the final line imaging - updated default.cfg - updated M51 notebook and cfg

--- a/ipython-notebooks/commissioning/APERTIF/M51.cfg
+++ b/ipython-notebooks/commissioning/APERTIF/M51.cfg
@@ -29,7 +29,7 @@ preflag_aoflagger_polcal = False
 preflag_aoflagger_target = True
 preflag_aoflagger_fluxcalstrat = 'fluxcal_apertif_XX.rfis'
 preflag_aoflagger_polcalstrat = ''
-preflag_aoflagger_targetstrat = 'fluxcal_apertif_XX.rfis'
+preflag_aoflagger_targetstrat = 'target_apertif_XX.rfis'
 
 [CONVERT]
 convert_ms2uvfits = True
@@ -54,6 +54,7 @@ selfcal_image_cellsize = 10
 selfcal_splitdata = True
 selfcal_splitdata_chunkbandwidth = 0.02
 selfcal_splitdata_channelbandwidth = 0.001
+selfcal_flagantenna = '' # Be careful! MIRIAD format here. Antenna numbering starts with 1 and counts upwards. No antenna names allowed.
 selfcal_flagline = True
 selfcal_flagline_sigma = 0.5
 selfcal_parametric = False
@@ -137,6 +138,7 @@ final_continuum_dr0 = 2.0
 final_continuum_nsigma = 30
 final_continuum_robust = ''
 final_line = False
+final_line_channels = '9200,10200' # Two comma seperated values as a string with the beginning and end channels, zero based
 final_line_image_imsize = 513
 final_line_image_cellsize = 10
 final_line_image_centre = ''
