--- a/default.cfg
+++ b/default.cfg
@@ -54,6 +54,7 @@ selfcal_image_cellsize = 10
 selfcal_splitdata = True
 selfcal_splitdata_chunkbandwidth = 0.02
 selfcal_splitdata_channelbandwidth = 0.001
+selfcal_flagantenna = '' # Be careful! MIRIAD format here. Antenna numbering starts with 1 and counts upwards. No antenna names allowed.
 selfcal_flagline = True
 selfcal_flagline_sigma = 0.5
 selfcal_parametric = False
@@ -137,6 +138,7 @@ final_continuum_dr0 = 2.0
 final_continuum_nsigma = 30
 final_continuum_robust = ''
 final_line = False
+final_line_channels = '' # Two comma seperated values as a string with the beginning and end channels, zero based
 final_line_image_imsize = 513
 final_line_image_cellsize = 10
 final_line_image_centre = ''
