- refactoring of the whole pipeline into sub-directories and sub-routines - removed final module - added continuum module for continuum imaging and added line imaging to line module - redid the tutorials for APERTIF data - interactive tasks are removed for the moment - added prepare module to automatically create directory structure and copying of data - added notebook structure for busy days

--- a/ipython-notebooks/commissioning/01 - Bandpass stability for individual element beams/Bandpass_stability.cfg
+++ b/ipython-notebooks/commissioning/01 - Bandpass stability for individual element beams/Bandpass_stability.cfg
@@ -4,11 +4,19 @@ fluxcal = '3C48.MS'
 polcal = ''
 target = ''
 basedir = '/data/adebahr/apertif/100608_3C48/'
+beam = '00'
 rawsubdir = 'raw'
 crosscalsubdir = 'crosscal'
 selfcalsubdir = 'selfcal'
 linesubdir = 'line'
-finalsubdir = 'final'
+contsubdir = 'continuum'
+polsubdir = 'polarisation'
+
+[PREPARE]
+prepare_obsdir_fluxcal = '/data/apertif/100608_3C48/'
+prepare_obsdir_polcal = ''
+prepare_obsdir_target = ''
+prepare_obsmode = 'single_element'
 
 [PREFLAG]
 preflag_manualflag = True
@@ -16,7 +24,7 @@ preflag_manualflag_fluxcal = True
 preflag_manualflag_polcal = False
 preflag_manualflag_target = False
 preflag_manualflag_auto = True
-preflag_manualflag_antenna = ''
+preflag_manualflag_antenna = 'RTA'
 preflag_manualflag_corr = ''
 preflag_manualflag_shadow = True
 preflag_manualflag_baseline = ''
@@ -27,7 +35,7 @@ preflag_aoflagger_bandpass = True
 preflag_aoflagger_fluxcal = True
 preflag_aoflagger_polcal = False
 preflag_aoflagger_target = False
-preflag_aoflagger_fluxcalstrat = 'fluxcal_apertif_XX.rfis'
+preflag_aoflagger_fluxcalstrat = 'fluxcal.rfis'
 preflag_aoflagger_polcalstrat = ''
 preflag_aoflagger_targetstrat = ''
 
@@ -42,7 +50,6 @@ convert_polcal = False
 convert_target = False
 
 [CROSSCAL]
-crosscal_applysys = False
 crosscal_bandpass = True
 crosscal_delay = True
 crosscal_polarisation = False
