--- a/ipython-notebooks/tutorials/cfg/2.cfg
+++ b/ipython-notebooks/tutorials/cfg/2.cfg
@@ -1,11 +1,139 @@
 [INITIAL]
 apercaldir = '/home/adebahr/apercal'
-fluxcal = ''
+fluxcal = '3C286.MS'
 polcal = ''
-target = 'LH01.MS'
-basedir = '/data/adebahr/apertif/tutorial/2/'
+target = 'J1819+3845.MS'
+basedir = '/data/adebahr/apertif/tutorials/T2/'
+beam = '00'
 rawsubdir = 'raw'
 crosscalsubdir = 'crosscal'
 selfcalsubdir = 'selfcal'
 linesubdir = 'line'
-finalsubdir = 'final'
+contsubdir = 'continuum'
+polsubdir = 'polarisation'
+
+[PREPARE]
+prepare_obsdir_fluxcal = '/data2/apertif/17122114_3C286/'
+prepare_obsdir_polcal = ''
+prepare_obsdir_target = '/data2/apertif/17122115_J1819+3845/'
+prepare_obsmode = 'multi_element'
+
+[PREFLAG]
+preflag_manualflag = True
+preflag_manualflag_fluxcal = True
+preflag_manualflag_polcal = False
+preflag_manualflag_target = True
+preflag_manualflag_auto = True
+preflag_manualflag_antenna = ''
+preflag_manualflag_corr = ''
+preflag_manualflag_shadow = True
+preflag_manualflag_baseline = ''
+preflag_manualflag_channel = ''
+preflag_manualflag_time = '17:40:00~20:00:00'
+preflag_aoflagger = True
+preflag_aoflagger_bandpass = True
+preflag_aoflagger_fluxcal = True
+preflag_aoflagger_polcal = False
+preflag_aoflagger_target = True
+preflag_aoflagger_fluxcalstrat = 'fluxcal.rfis'
+preflag_aoflagger_polcalstrat = ''
+preflag_aoflagger_targetstrat = 'target.rfis'
+
+[CONVERT]
+convert_ms2uvfits = True
+convert_ms2uvfits_tool_casa_autocorr = False
+convert_uvfits2mir = True
+convert_fluxcal = True
+convert_polcal = False
+convert_target = True
+
+[CROSSCAL]
+crosscal_bandpass = True
+crosscal_delay = True
+crosscal_polarisation = False
+crosscal_transfer_to_target = True
+
+[SELFCAL]
+selfcal_image_imsize = 1025
+selfcal_image_cellsize = 6
+selfcal_splitdata = True
+selfcal_splitdata_chunkbandwidth = 0.02
+selfcal_splitdata_channelbandwidth = 0.001
+selfcal_flagantenna = '' # Be careful! MIRIAD format here. Antenna numbering starts with 1 and counts upwards. No antenna names allowed.
+selfcal_flagline = True
+selfcal_flagline_sigma = 0.5
+selfcal_parametric = True
+selfcal_parametric_skymodel_radius = 0.5
+selfcal_parametric_skymodel_cutoff = 0.8
+selfcal_parametric_skymodel_distance = 30
+selfcal_parametric_solint = 5
+selfcal_parametric_uvmin = 0.5
+selfcal_parametric_uvmax = 1000
+selfcal_parametric_amp = False
+selfcal_standard_majorcycle = 3
+selfcal_standard_majorcycle_function = 'square'
+selfcal_standard_minorcycle = 5
+selfcal_standard_minorcycle_function = 'square'
+selfcal_standard_c0 = 10.0
+selfcal_standard_c1 = 5.0
+selfcal_standard_minorcycle0_dr = 3.0
+selfcal_standard_drinit = 25
+selfcal_standard_dr0 = 2.0
+selfcal_standard_nsigma = 50
+selfcal_standard_uvmin = [0.0,0.0,0.0]
+selfcal_standard_uvmax = [3000,3000,3000]
+selfcal_standard_solint = [5,3,0.5]
+selfcal_standard_amp = False
+selfcal_standard_amp_auto_limit = 1.0
+selfcal_standard_nfbin = 1
+
+[CONTINUUM]
+continuum_image_imsize = 1025
+continuum_image_cellsize = 6
+continuum_image_centre = ''
+continuum_image_restorbeam = ''
+continuum_image_convolbeam = '45,45,0.0'
+continuum_mode = 'stack'
+continuum_majorcycle_function = 'square'
+continuum_minorcycle_function = 'square'
+continuum_minorcycle0_dr = 3.0
+continuum_minorcycle = 5
+continuum_c0 = 10.0
+continuum_c1 = 5.0
+continuum_drinit = 25
+continuum_dr0 = 2.0
+continuum_nsigma = 30
+continuum_robust = ''
+
+[LINE]
+line_splitdata = True
+line_splitdata_chunkbandwidth = 0.02
+line_splitdata_channelbandwidth = 0.000012
+line_transfergains = True
+line_subtract = True
+line_subtract_mode = 'uvmodel'
+line_subtract_mode_uvmodel_majorcycle_function = 'square'
+line_subtract_mode_uvmodel_minorcycle_function = 'square'
+line_subtract_mode_uvmodel_minorcycle = 5
+line_subtract_mode_uvmodel_c0 = 10.0
+line_subtract_mode_uvmodel_c1 = 5.0
+line_subtract_mode_uvmodel_drinit = 25
+line_subtract_mode_uvmodel_dr0 = 2.0
+line_subtract_mode_uvmodel_nsigma = 30
+line_subtract_mode_uvmodel_imsize = 1025
+line_subtract_mode_uvmodel_cellsize = 6
+line_subtract_mode_uvmodel_minorcycle0_dr = 3.0
+line_image = True
+line_image_channels = '9650,9800' # Two comma seperated values as a string with the beginning and end channels, zero based
+line_image_imsize = 1025
+line_image_cellsize = 6
+line_image_centre = ''
+line_image_robust = -2
+line_image_ratio_limit = 1.05
+line_image_c0 = 10.0
+line_image_c1 = 5.0
+line_image_nsigma = 20
+line_image_minorcycle0_dr = 3.0
+line_image_dr0 = 2.0
+line_image_restorbeam = ''
+line_image_convolbeam = '45,45,0.0'
