--- a/modules/default.cfg
+++ b/modules/default.cfg
@@ -1,10 +1,10 @@
 [INITIAL]
 apercaldir = '/home/adebahr/apercal'
-fluxcal = '3C147.MS'
+fluxcal = ''
 polcal = ''
-target = 'M51.MS'
-basedir = '/data/adebahr/apertif/tutorials/T1/'
-beam = '00'
+target = ''
+basedir = ''
+beam = ''
 rawsubdir = 'raw'
 crosscalsubdir = 'crosscal'
 selfcalsubdir = 'selfcal'
@@ -13,9 +13,9 @@ contsubdir = 'continuum'
 polsubdir = 'polarisation'
 
 [PREPARE]
-prepare_obsdir_fluxcal = '/data/apertif/7070707_3C147/'
+prepare_obsdir_fluxcal = ''
 prepare_obsdir_polcal = ''
-prepare_obsdir_target = '/data/apertif/7070708_M51/'
+prepare_obsdir_target = ''
 prepare_obsmode = 'single_element'
 
 [PREFLAG]
@@ -80,7 +80,7 @@ selfcal_standard_minorcycle0_dr = 3.0
 selfcal_standard_drinit = 25
 selfcal_standard_dr0 = 2.0
 selfcal_standard_nsigma = 50
-selfcal_standard_uvmin = [0.0,0.0,0.0]
+selfcal_standard_uvmin = [0.0,0.0,0.0,0.0]
 selfcal_standard_uvmax = [3000,3000,3000]
 selfcal_standard_solint = [5,3,0.5]
 selfcal_standard_amp = False
@@ -92,7 +92,7 @@ continuum_image_imsize = 1025
 continuum_image_cellsize = 8
 continuum_image_centre = ''
 continuum_image_restorbeam = ''
-continuum_image_convolbeam = '45,45,0.0'
+continuum_image_convolbeam = ''
 continuum_mode = 'stack'
 continuum_majorcycle_function = 'square'
 continuum_minorcycle_function = 'square'
@@ -106,11 +106,11 @@ continuum_nsigma = 30
 continuum_robust = ''
 
 [LINE]
-line_splitdata = True
+line_splitdata = False
 line_splitdata_chunkbandwidth = 0.02
 line_splitdata_channelbandwidth = 0.000012
-line_transfergains = True
-line_subtract = True
+line_transfergains = False
+line_subtract = False
 line_subtract_mode = 'uvmodel'
 line_subtract_mode_uvmodel_majorcycle_function = 'square'
 line_subtract_mode_uvmodel_minorcycle_function = 'square'
@@ -120,8 +120,8 @@ line_subtract_mode_uvmodel_c1 = 5.0
 line_subtract_mode_uvmodel_drinit = 25
 line_subtract_mode_uvmodel_dr0 = 2.0
 line_subtract_mode_uvmodel_nsigma = 30
-line_subtract_mode_uvmodel_imsize = 1025
-line_subtract_mode_uvmodel_cellsize = 8
+line_subtract_mode_uvmodel_imsize = 513
+line_subtract_mode_uvmodel_cellsize = 10
 line_subtract_mode_uvmodel_minorcycle0_dr = 3.0
 line_image = True
 line_image_channels = '9650,9800' # Two comma seperated values as a string with the beginning and end channels, zero based
@@ -129,11 +129,11 @@ line_image_imsize = 1025
 line_image_cellsize = 8
 line_image_centre = ''
 line_image_robust = -2
-line_image_ratio_limit = 1.05
+line_image_ratio_limit = 1.03
 line_image_c0 = 10.0
 line_image_c1 = 5.0
 line_image_nsigma = 20
 line_image_minorcycle0_dr = 3.0
 line_image_dr0 = 2.0
 line_image_restorbeam = ''
-line_image_convolbeam = '45,45,0.0'
+line_image_convolbeam = '30,30,0.0'
