--- a/ipython-notebooks/tutorials/cfg/0.cfg
+++ b/ipython-notebooks/tutorials/cfg/0.cfg
@@ -1,120 +1,139 @@
 [INITIAL]
 apercaldir = '/home/adebahr/apercal'
 fluxcal = '3C147.MS'
-polcal = '3C138.MS'
-target = 'NGC4062.MS'
-basedir = '/data/adebahr/apertif/tutorial/0/'
+polcal = ''
+target = 'M51.MS'
+basedir = '/data/adebahr/apertif/tutorials/T0/'
+beam = '00'
 rawsubdir = 'raw'
 crosscalsubdir = 'crosscal'
 selfcalsubdir = 'selfcal'
 linesubdir = 'line'
-finalsubdir = 'final'
+contsubdir = 'continuum'
+polsubdir = 'polarisation'
+
+[PREPARE]
+prepare_obsdir_fluxcal = '/data/apertif/7070707_3C147/'
+prepare_obsdir_polcal = ''
+prepare_obsdir_target = '/data/apertif/7070708_M51/'
+prepare_obsmode = 'single_element'
 
 [PREFLAG]
-preflag_aoflagger = True
-preflag_aoflagger_fluxcal = True
-preflag_aoflagger_polcal = True
-preflag_aoflagger_target = True
-preflag_aoflagger_fluxcalstrat = 'fluxcal.rfis'
-preflag_aoflagger_polcalstrat = 'polcal.rfis'
-preflag_aoflagger_targetstrat = 'target.rfis'
 preflag_manualflag = True
 preflag_manualflag_fluxcal = True
-preflag_manualflag_polcal = True
+preflag_manualflag_polcal = False
 preflag_manualflag_target = True
 preflag_manualflag_auto = True
-preflag_manualflag_antenna = 'RT5'
+preflag_manualflag_antenna = ''
 preflag_manualflag_corr = ''
 preflag_manualflag_shadow = True
 preflag_manualflag_baseline = ''
+preflag_manualflag_channel = ''
+preflag_manualflag_time = ''
+preflag_aoflagger = True
+preflag_aoflagger_bandpass = True
+preflag_aoflagger_fluxcal = True
+preflag_aoflagger_polcal = False
+preflag_aoflagger_target = True
+preflag_aoflagger_fluxcalstrat = 'fluxcal.rfis'
+preflag_aoflagger_polcalstrat = ''
+preflag_aoflagger_targetstrat = 'target.rfis'
 
 [CONVERT]
 convert_ms2uvfits = True
-convert_ms2uvfits_tool = 'casa'
 convert_ms2uvfits_tool_casa_autocorr = False
 convert_uvfits2mir = True
-convert_uvfits2mir_tool = 'wsrtfits'
-convert_fluxcal = False
-convert_polcal = True
+convert_fluxcal = True
+convert_polcal = False
 convert_target = True
 
 [CROSSCAL]
-crosscal_mode = 'WSRT'
-crosscal_fringestop = False
-crosscal_fringestop_mode = 'direct'
-crosscal_applysys = False
 crosscal_bandpass = True
-crosscal_polarisation = True
+crosscal_delay = True
+crosscal_polarisation = False
 crosscal_transfer_to_target = True
 
 [SELFCAL]
-selfcal_image_imsize = 1537
-selfcal_image_cellsize = 4
+selfcal_image_imsize = 1025
+selfcal_image_cellsize = 8
 selfcal_splitdata = True
 selfcal_splitdata_chunkbandwidth = 0.02
 selfcal_splitdata_channelbandwidth = 0.001
+selfcal_flagantenna = '' # Be careful! MIRIAD format here. Antenna numbering starts with 1 and counts upwards. No antenna names allowed.
 selfcal_flagline = True
-selfcal_flagline_sigma = 1
-selfcal_parametric = True
+selfcal_flagline_sigma = 0.5
+selfcal_parametric = False
 selfcal_parametric_skymodel_radius = 0.5
 selfcal_parametric_skymodel_cutoff = 0.8
 selfcal_parametric_skymodel_distance = 30
 selfcal_parametric_solint = 10
 selfcal_parametric_uvmin = 0.5
 selfcal_parametric_uvmax = 1000
-selfcal_mode = 'manual'
-selfcal_mode_standard_majorcycle = 5
-selfcal_mode_standard_minorcycle = 3
-selfcal_mode_standard_c0 = 1.1
-selfcal_mode_standard_c1 = 1.5
-selfcal_mode_standard_drinit = 100
-selfcal_mode_standard_dr0 = 2.0
-selfcal_mode_standard_nsigma = 8
-selfcal_mode_standard_uvmin = [0.5,0.3,0.1,0.0,0.0]
-selfcal_mode_standard_uvmax = [3000,3000,3000,3000,3000]
-selfcal_mode_standard_solint = [10,5,3,2,1]
-selfcal_mode_manual_majorcycle = 3
-selfcal_mode_manual_minorcycle = [3,3,3]
-selfcal_mode_manual_uvmin = [1,0.5,0.2]
-selfcal_mode_manual_uvmax = [3000,3000,3000]
-selfcal_mode_manual_solint = [10,5,1]
-selfcal_mode_manual_niters = [[500,10000,10000],[500,10000,10000],[500,10000,10000]]
-selfcal_mode_manual_cleancutoff = [[0.004,0.002,0.001],[0.003,0.001,0.0005],[0.0015,0.0008,0.0004]]
-selfcal_mode_manual_mskcutoff = [[0.01,0.005,0.003],[0.008,0.004,0.002],[0.005,0.002,0.001]]
-selfcal_mode_manual_cleanstopcriterium = [['both','rms','rms'],['both','rms','rms'],['both','rms','rms']]
-selfcal_mode_adaptive_startsolint = 20
-selfcal_mode_adaptive_startuvrange = 3
-selfcal_mode_adaptive_maxcycle = 5
-selfcal_mode_adaptive_drlim = 2.0
-selfcal_mode_adaptive_rmsfactor = 6.0
-selfcal_mode_adaptive_resirmsfactor = 1.75
-selfcal_mode_adaptive_firstniter = 500
-selfcal_mode_adaptive_firstrmsfactor = 10.0
+selfcal_parametric_amp = False
+selfcal_standard_majorcycle = 3
+selfcal_standard_majorcycle_function = 'square'
+selfcal_standard_minorcycle = 5
+selfcal_standard_minorcycle_function = 'square'
+selfcal_standard_c0 = 10.0
+selfcal_standard_c1 = 5.0
+selfcal_standard_minorcycle0_dr = 3.0
+selfcal_standard_drinit = 25
+selfcal_standard_dr0 = 2.0
+selfcal_standard_nsigma = 50
+selfcal_standard_uvmin = [0.0,0.0,0.0,0.0]
+selfcal_standard_uvmax = [3000,3000,3000]
+selfcal_standard_solint = [5,3,0.5]
+selfcal_standard_amp = False
+selfcal_standard_amp_auto_limit = 1.0
+selfcal_standard_nfbin = 1
+
+[CONTINUUM]
+continuum_image_imsize = 1025
+continuum_image_cellsize = 8
+continuum_image_centre = ''
+continuum_image_restorbeam = ''
+continuum_image_convolbeam = ''
+continuum_mode = 'stack'
+continuum_majorcycle_function = 'square'
+continuum_minorcycle_function = 'square'
+continuum_minorcycle0_dr = 3.0
+continuum_minorcycle = 5
+continuum_c0 = 10.0
+continuum_c1 = 5.0
+continuum_drinit = 25
+continuum_dr0 = 2.0
+continuum_nsigma = 30
+continuum_robust = ''
 
 [LINE]
-line_splitdata = True
+line_splitdata = False
 line_splitdata_chunkbandwidth = 0.02
-line_splitdata_channelbandwidth = 0.0002
-line_transfergains = True
-line_subtract = True
+line_splitdata_channelbandwidth = 0.000012
+line_transfergains = False
+line_subtract = False
 line_subtract_mode = 'uvmodel'
-
-[FINAL]
-final_continuum = True
-final_continuum_image_imsize = 1537
-final_continuum_image_cellsize = 4
-final_continuum_mode = 'mf'
-final_continuum_minorcycle = 3
-final_continuum_c0 = 3
-final_continuum_c1 = 3
-final_continuum_nsigma = 5
-final_continuum_extraiterations = 5000
-final_line = True
-final_line_image_imsize = 1537
-final_line_image_cellsize = 4
-final_line_image_mode = 'channel'
-final_polarisation = True
-final_polarisation_image_imsize = 1537
-final_polarisation_image_cellsize = 4
-final_polarisation_makecube = True
-final_polarisation_rmsynth = True
+line_subtract_mode_uvmodel_majorcycle_function = 'square'
+line_subtract_mode_uvmodel_minorcycle_function = 'square'
+line_subtract_mode_uvmodel_minorcycle = 5
+line_subtract_mode_uvmodel_c0 = 10.0
+line_subtract_mode_uvmodel_c1 = 5.0
+line_subtract_mode_uvmodel_drinit = 25
+line_subtract_mode_uvmodel_dr0 = 2.0
+line_subtract_mode_uvmodel_nsigma = 30
+line_subtract_mode_uvmodel_imsize = 513
+line_subtract_mode_uvmodel_cellsize = 10
+line_subtract_mode_uvmodel_minorcycle0_dr = 3.0
+line_image = True
+line_image_channels = '9650,9800' # Two comma seperated values as a string with the beginning and end channels, zero based
+line_image_imsize = 1025
+line_image_cellsize = 8
+line_image_centre = ''
+line_image_robust = -2
+line_image_ratio_limit = 1.03
+line_image_c0 = 10.0
+line_image_c1 = 5.0
+line_image_nsigma = 20
+line_image_minorcycle0_dr = 3.0
+line_image_dr0 = 2.0
+line_image_restorbeam = ''
+line_image_convolbeam = '30,30,0.0'
