- Added MOSAIC module - Added TRANSFER module - made CONTINUUM, MOSAIC, TRANSFER modules less talkative - added projects directory to ipython-notebooks - added aper_abs - made tutorials more fancy - reworked tutorial T2 - added and moved several functions into subroutines - robust weighting for selfcal set to -2 as default and to -1 for continuum imaging - added creation of parameter file to MOSAIC and TRANSFER modules - centre of pointing for continuum imaging is now set to the pointing centre of beam 00 as default

--- a/ipython-notebooks/commissioning/01/17122123_3C286_0.cfg
+++ b/ipython-notebooks/commissioning/01/17122123_3C286_0.cfg
@@ -11,6 +11,7 @@ selfcalsubdir = 'selfcal'
 linesubdir = 'line'
 contsubdir = 'continuum'
 polsubdir = 'polarisation'
+mossubdir = 'mosaics'
 
 [PREPARE]
 prepare_obsdir_fluxcal = '/data2/apertif/17122123_3C286_0/'
