--- a/ipython-notebooks/tutorials/cfg/0.cfg
+++ b/ipython-notebooks/tutorials/cfg/0.cfg
@@ -11,6 +11,7 @@ selfcalsubdir = 'selfcal'
 linesubdir = 'line'
 contsubdir = 'continuum'
 polsubdir = 'polarisation'
+mossubdir = 'mosaics'
 
 [PREPARE]
 prepare_obsdir_fluxcal = '/data/apertif/7070707_3C147/'
@@ -137,3 +138,12 @@ line_image_minorcycle0_dr = 3.0
 line_image_dr0 = 2.0
 line_image_restorbeam = ''
 line_image_convolbeam = '30,30,0.0'
+
+[MOSAIC]
+mosaic_continuum = True
+mosaic_continuum_chunks = True
+mosaic_line = False
+mosaic_polarisation = False
+
+[TRANSFER]
+transfer_convert_lineuv2uvfits = True
