--- a/ipython-notebooks/commissioning/07/parallel_line_test.cfg
+++ b/ipython-notebooks/commissioning/07/parallel_line_test.cfg
@@ -1,9 +1,9 @@
 [INITIAL]
-apercaldir = '/home/verstappen/latest-apercal-mod/apercal'
+apercaldir = '/home/adebahr/apercal'
 fluxcal = '3C295.MS'
 polcal = ''
 target = 'NGC807.MS'
-basedir = '/data/verstappen/NGC807/'
+basedir = '/data/adebahr/NGC807/'
 beam = '00'
 rawsubdir = 'raw'
 crosscalsubdir = 'crosscal'
@@ -11,6 +11,7 @@ selfcalsubdir = 'selfcal'
 linesubdir = 'line'
 contsubdir = 'continuum'
 polsubdir = 'polarisation'
+mossubdir = 'mosaics'
 
 [PREPARE]
 prepare_obsdir_fluxcal = ''
@@ -120,11 +121,11 @@ line_subtract_mode_uvmodel_c1 = 5.0
 line_subtract_mode_uvmodel_drinit = 25
 line_subtract_mode_uvmodel_dr0 = 2.0
 line_subtract_mode_uvmodel_nsigma = 30
-line_subtract_mode_uvmodel_imsize = 1026
+line_subtract_mode_uvmodel_imsize = 1025
 line_subtract_mode_uvmodel_cellsize = 10
 line_subtract_mode_uvmodel_minorcycle0_dr = 3.0
 line_image = True
-line_image_channels = '0,367' # Two comma seperated values as a string with the beginning and end channels, zero based
+line_image_channels = '4000,4999' # Two comma seperated values as a string with the beginning and end channels, zero based
 line_image_imsize = 1025
 line_image_cellsize = 8
 line_image_centre = ''
