--- a/ipython-notebooks/tutorials/cfg/1.cfg
+++ b/ipython-notebooks/tutorials/cfg/1.cfg
@@ -11,6 +11,7 @@ selfcalsubdir = 'selfcal'
 linesubdir = 'line'
 contsubdir = 'continuum'
 polsubdir = 'polarisation'
+mossubdir = 'mosaics'
 
 [PREPARE]
 prepare_obsdir_fluxcal = '/data/apertif/7070707_3C147/'
