--- a/ipython-notebooks/tutorials/cfg/2.cfg
+++ b/ipython-notebooks/tutorials/cfg/2.cfg
@@ -2,7 +2,7 @@
 apercaldir = '/home/adebahr/apercal'
 fluxcal = '3C286.MS'
 polcal = ''
-target = 'J1819+3845.MS'
+target = 'LH.MS'
 basedir = '/data/adebahr/apertif/tutorials/T2/'
 beam = '00'
 rawsubdir = 'raw'
@@ -11,11 +11,13 @@ selfcalsubdir = 'selfcal'
 linesubdir = 'line'
 contsubdir = 'continuum'
 polsubdir = 'polarisation'
+mossubdir = 'mosaics'
+transfersubdir = 'transfer'
 
 [PREPARE]
-prepare_obsdir_fluxcal = '/data2/apertif/17122114_3C286/'
+prepare_obsdir_fluxcal = '/data5/apertif/180302013_3C286/'
 prepare_obsdir_polcal = ''
-prepare_obsdir_target = '/data2/apertif/17122115_J1819+3845/'
+prepare_obsdir_target = '/data5/apertif/180302012_LH_WSRT/'
 prepare_obsmode = 'multi_element'
 
 [PREFLAG]
@@ -29,7 +31,7 @@ preflag_manualflag_corr = ''
 preflag_manualflag_shadow = True
 preflag_manualflag_baseline = ''
 preflag_manualflag_channel = ''
-preflag_manualflag_time = '17:40:00~20:00:00'
+preflag_manualflag_time = ''
 preflag_aoflagger = True
 preflag_aoflagger_bandpass = True
 preflag_aoflagger_fluxcal = True
@@ -54,8 +56,8 @@ crosscal_polarisation = False
 crosscal_transfer_to_target = True
 
 [SELFCAL]
-selfcal_image_imsize = 1025
-selfcal_image_cellsize = 6
+selfcal_image_imsize = 2049
+selfcal_image_cellsize = 4
 selfcal_splitdata = True
 selfcal_splitdata_chunkbandwidth = 0.02
 selfcal_splitdata_channelbandwidth = 0.001
@@ -72,37 +74,37 @@ selfcal_parametric_uvmax = 1000
 selfcal_parametric_amp = False
 selfcal_standard_majorcycle = 3
 selfcal_standard_majorcycle_function = 'square'
-selfcal_standard_minorcycle = 5
+selfcal_standard_minorcycle = 3
 selfcal_standard_minorcycle_function = 'square'
 selfcal_standard_c0 = 10.0
 selfcal_standard_c1 = 5.0
-selfcal_standard_minorcycle0_dr = 3.0
-selfcal_standard_drinit = 25
+selfcal_standard_minorcycle0_dr = 5.0
+selfcal_standard_drinit = 50
 selfcal_standard_dr0 = 2.0
-selfcal_standard_nsigma = 50
+selfcal_standard_nsigma = 45
 selfcal_standard_uvmin = [0.0,0.0,0.0]
 selfcal_standard_uvmax = [3000,3000,3000]
-selfcal_standard_solint = [5,3,0.5]
-selfcal_standard_amp = False
+selfcal_standard_solint = [3,1,0.5]
+selfcal_standard_amp = 'auto'
 selfcal_standard_amp_auto_limit = 1.0
 selfcal_standard_nfbin = 1
 
 [CONTINUUM]
-continuum_image_imsize = 1025
-continuum_image_cellsize = 6
+continuum_image_imsize = 2049
+continuum_image_cellsize = 4
 continuum_image_centre = ''
 continuum_image_restorbeam = ''
-continuum_image_convolbeam = '45,45,0.0'
+continuum_image_convolbeam = ''
 continuum_mode = 'stack'
 continuum_majorcycle_function = 'square'
 continuum_minorcycle_function = 'square'
-continuum_minorcycle0_dr = 3.0
-continuum_minorcycle = 5
+continuum_minorcycle0_dr = 5.0
+continuum_minorcycle = 3
 continuum_c0 = 10.0
 continuum_c1 = 5.0
-continuum_drinit = 25
+continuum_drinit = 50
 continuum_dr0 = 2.0
-continuum_nsigma = 30
+continuum_nsigma = 45
 continuum_robust = ''
 
 [LINE]
@@ -110,7 +112,7 @@ line_splitdata = True
 line_splitdata_chunkbandwidth = 0.02
 line_splitdata_channelbandwidth = 0.000012
 line_transfergains = True
-line_subtract = True
+line_subtract = False
 line_subtract_mode = 'uvmodel'
 line_subtract_mode_uvmodel_majorcycle_function = 'square'
 line_subtract_mode_uvmodel_minorcycle_function = 'square'
@@ -120,20 +122,29 @@ line_subtract_mode_uvmodel_c1 = 5.0
 line_subtract_mode_uvmodel_drinit = 25
 line_subtract_mode_uvmodel_dr0 = 2.0
 line_subtract_mode_uvmodel_nsigma = 30
-line_subtract_mode_uvmodel_imsize = 1025
-line_subtract_mode_uvmodel_cellsize = 6
+line_subtract_mode_uvmodel_imsize = 513
+line_subtract_mode_uvmodel_cellsize = 10
 line_subtract_mode_uvmodel_minorcycle0_dr = 3.0
-line_image = True
+line_image = False
 line_image_channels = '9650,9800' # Two comma seperated values as a string with the beginning and end channels, zero based
-line_image_imsize = 1025
-line_image_cellsize = 6
+line_image_imsize = 2049
+line_image_cellsize = 4
 line_image_centre = ''
 line_image_robust = -2
 line_image_ratio_limit = 1.05
 line_image_c0 = 10.0
 line_image_c1 = 5.0
-line_image_nsigma = 20
-line_image_minorcycle0_dr = 3.0
+line_image_nsigma = 45
+line_image_minorcycle0_dr = 5.0
 line_image_dr0 = 2.0
 line_image_restorbeam = ''
-line_image_convolbeam = '45,45,0.0'
+line_image_convolbeam = '30,30,0.0'
+
+[MOSAIC]
+mosaic_continuum_stack = True
+mosaic_continuum_chunks = True
+mosaic_line = False
+mosaic_polarisation = False
+
+[TRANSFER]
+transfer_convert_lineuv2uvfits = True
