--- a/modules/default.cfg
+++ b/modules/default.cfg
@@ -11,6 +11,8 @@ selfcalsubdir = 'selfcal'
 linesubdir = 'line'
 contsubdir = 'continuum'
 polsubdir = 'polarisation'
+mossubdir = 'mosaics'
+transfersubdir = 'transfer'
 
 [PREPARE]
 prepare_obsdir_fluxcal = ''
@@ -54,8 +56,8 @@ crosscal_polarisation = False
 crosscal_transfer_to_target = True
 
 [SELFCAL]
-selfcal_image_imsize = 1025
-selfcal_image_cellsize = 8
+selfcal_image_imsize = 2049
+selfcal_image_cellsize = 4
 selfcal_splitdata = True
 selfcal_splitdata_chunkbandwidth = 0.02
 selfcal_splitdata_channelbandwidth = 0.001
@@ -66,51 +68,51 @@ selfcal_parametric = False
 selfcal_parametric_skymodel_radius = 0.5
 selfcal_parametric_skymodel_cutoff = 0.8
 selfcal_parametric_skymodel_distance = 30
-selfcal_parametric_solint = 10
+selfcal_parametric_solint = 5
 selfcal_parametric_uvmin = 0.5
 selfcal_parametric_uvmax = 1000
 selfcal_parametric_amp = False
 selfcal_standard_majorcycle = 3
 selfcal_standard_majorcycle_function = 'square'
-selfcal_standard_minorcycle = 5
+selfcal_standard_minorcycle = 3
 selfcal_standard_minorcycle_function = 'square'
 selfcal_standard_c0 = 10.0
 selfcal_standard_c1 = 5.0
-selfcal_standard_minorcycle0_dr = 3.0
-selfcal_standard_drinit = 25
+selfcal_standard_minorcycle0_dr = 5.0
+selfcal_standard_drinit = 50
 selfcal_standard_dr0 = 2.0
-selfcal_standard_nsigma = 50
-selfcal_standard_uvmin = [0.0,0.0,0.0,0.0]
+selfcal_standard_nsigma = 45
+selfcal_standard_uvmin = [0.0,0.0,0.0]
 selfcal_standard_uvmax = [3000,3000,3000]
-selfcal_standard_solint = [5,3,0.5]
+selfcal_standard_solint = [3,1,0.5]
 selfcal_standard_amp = False
 selfcal_standard_amp_auto_limit = 1.0
 selfcal_standard_nfbin = 1
 
 [CONTINUUM]
-continuum_image_imsize = 1025
-continuum_image_cellsize = 8
+continuum_image_imsize = 2049
+continuum_image_cellsize = 4
 continuum_image_centre = ''
 continuum_image_restorbeam = ''
 continuum_image_convolbeam = ''
 continuum_mode = 'stack'
 continuum_majorcycle_function = 'square'
 continuum_minorcycle_function = 'square'
-continuum_minorcycle0_dr = 3.0
-continuum_minorcycle = 5
+continuum_minorcycle0_dr = 5.0
+continuum_minorcycle = 3
 continuum_c0 = 10.0
 continuum_c1 = 5.0
-continuum_drinit = 25
+continuum_drinit = 50
 continuum_dr0 = 2.0
-continuum_nsigma = 30
+continuum_nsigma = 45
 continuum_robust = ''
 
 [LINE]
-line_splitdata = False
+line_splitdata = True
 line_splitdata_chunkbandwidth = 0.02
 line_splitdata_channelbandwidth = 0.000012
-line_transfergains = False
-line_subtract = False
+line_transfergains = True
+line_subtract = True
 line_subtract_mode = 'uvmodel'
 line_subtract_mode_uvmodel_majorcycle_function = 'square'
 line_subtract_mode_uvmodel_minorcycle_function = 'square'
@@ -125,15 +127,24 @@ line_subtract_mode_uvmodel_cellsize = 10
 line_subtract_mode_uvmodel_minorcycle0_dr = 3.0
 line_image = True
 line_image_channels = '9650,9800' # Two comma seperated values as a string with the beginning and end channels, zero based
-line_image_imsize = 1025
-line_image_cellsize = 8
+line_image_imsize = 2049
+line_image_cellsize = 4
 line_image_centre = ''
 line_image_robust = -2
-line_image_ratio_limit = 1.03
+line_image_ratio_limit = 1.05
 line_image_c0 = 10.0
 line_image_c1 = 5.0
-line_image_nsigma = 20
-line_image_minorcycle0_dr = 3.0
+line_image_nsigma = 45
+line_image_minorcycle0_dr = 5.0
 line_image_dr0 = 2.0
 line_image_restorbeam = ''
 line_image_convolbeam = '30,30,0.0'
+
+[MOSAIC]
+mosaic_continuum_stack = True
+mosaic_continuum_chunks = True
+mosaic_line = False
+mosaic_polarisation = False
+
+[TRANSFER]
+transfer_convert_lineuv2uvfits = True
