- fixed continuum module. Threw an exception before due to wrongly assigned parameter - added reference antenna selection to selfcal module

--- a/ipython-notebooks/tutorials/cfg/3.cfg
+++ b/ipython-notebooks/tutorials/cfg/3.cfg
@@ -1,11 +1,14 @@
 [INITIAL]
 apercaldir = '/home/adebahr/apercal'
-fluxcal = ''
+fluxcal = '3C286.MS'
 polcal = ''
-target = 'LH01.MS'
-basedir = '/data/adebahr/apertif/tutorial/2/'
+target = 'LH.MS'
+basedir = '/data/adebahr/apertif/tutorials/T2/'
+beam = '00'
 rawsubdir = 'raw'
 crosscalsubdir = 'crosscal'
 selfcalsubdir = 'selfcal'
 linesubdir = 'line'
-finalsubdir = 'final'
+contsubdir = 'continuum'
+polsubdir = 'polarisation'
+mossubdir = 'mosaics'
