--- a/ipython-notebooks/tutorials/cfg/0.cfg
+++ b/ipython-notebooks/tutorials/cfg/0.cfg
@@ -57,6 +57,7 @@ crosscal_transfer_to_target = True
 [SELFCAL]
 selfcal_image_imsize = 1025
 selfcal_image_cellsize = 8
+selfcal_refant = ''
 selfcal_splitdata = True
 selfcal_splitdata_chunkbandwidth = 0.02
 selfcal_splitdata_channelbandwidth = 0.001
@@ -94,6 +95,7 @@ continuum_image_cellsize = 8
 continuum_image_centre = ''
 continuum_image_restorbeam = ''
 continuum_image_convolbeam = ''
+continuum_image_robust = ''
 continuum_mode = 'stack'
 continuum_majorcycle_function = 'square'
 continuum_minorcycle_function = 'square'
@@ -104,7 +106,6 @@ continuum_c1 = 5.0
 continuum_drinit = 25
 continuum_dr0 = 2.0
 continuum_nsigma = 30
-continuum_robust = ''
 
 [LINE]
 line_splitdata = False
