--- a/modules/default.cfg
+++ b/modules/default.cfg
@@ -58,6 +58,7 @@ crosscal_transfer_to_target = True
 [SELFCAL]
 selfcal_image_imsize = 2049
 selfcal_image_cellsize = 4
+selfcal_refant = ''
 selfcal_splitdata = True
 selfcal_splitdata_chunkbandwidth = 0.02
 selfcal_splitdata_channelbandwidth = 0.001
@@ -95,6 +96,7 @@ continuum_image_cellsize = 4
 continuum_image_centre = ''
 continuum_image_restorbeam = ''
 continuum_image_convolbeam = ''
+continuum_image_robust = ''
 continuum_mode = 'stack'
 continuum_majorcycle_function = 'square'
 continuum_minorcycle_function = 'square'
@@ -105,7 +107,6 @@ continuum_c1 = 5.0
 continuum_drinit = 50
 continuum_dr0 = 2.0
 continuum_nsigma = 45
-continuum_robust = ''
 
 [LINE]
 line_splitdata = True
