- added parameter file to CONTINUUM and MOSAIC modules - added summary functions to CONTINUUM and MOSAIC modules - started on tutorial 3 to explain investigation of pipeline data products - added line_parallel.py to modules

--- a/ipython-notebooks/tutorials/cfg/0.cfg
+++ b/ipython-notebooks/tutorials/cfg/0.cfg
@@ -12,6 +12,7 @@ linesubdir = 'line'
 contsubdir = 'continuum'
 polsubdir = 'polarisation'
 mossubdir = 'mosaics'
+transfersubdir = 'transfer'
 
 [PREPARE]
 prepare_obsdir_fluxcal = '/data/apertif/7070707_3C147/'
