--- a/ipython-notebooks/tutorials/cfg/1.cfg
+++ b/ipython-notebooks/tutorials/cfg/1.cfg
@@ -12,6 +12,7 @@ linesubdir = 'line'
 contsubdir = 'continuum'
 polsubdir = 'polarisation'
 mossubdir = 'mosaics'
+transfersubdir = 'transfer'
 
 [PREPARE]
 prepare_obsdir_fluxcal = '/data/apertif/7070707_3C147/'
