- updated the prepare module to use irods and ALTA - added summary function to the prepare module - removed parallel code from line module, it is in line_parallel - added irods subroutine

--- a/modules/default.cfg
+++ b/modules/default.cfg
@@ -1,5 +1,5 @@
 [INITIAL]
-apercaldir = '/home/adebahr/apercal'
+apercaldir = ''
 fluxcal = ''
 polcal = ''
 target = ''
@@ -15,10 +15,11 @@ mossubdir = 'mosaics'
 transfersubdir = 'transfer'
 
 [PREPARE]
-prepare_obsdir_fluxcal = ''
-prepare_obsdir_polcal = ''
-prepare_obsdir_target = ''
-prepare_obsmode = 'single_element'
+prepare_date = '180817' # Format: YYMMDD
+prepare_obsnum_fluxcal = '001' # Format: NNN
+prepare_obsnum_polcal = '002' # Format: NNN
+prepare_obsnum_target = '003' # Format: NNN
+prepare_target_beams = '00,01' # Format: 'all' for all beams, '' for no target, and 'NN,MM,...' for certain beam numbers
 
 [PREFLAG]
 preflag_manualflag = True
