- removed casac dependencies from the whole pipeline (float error during PREFLAG is gone) - added dependency on drivecasa - rewrote preflag and convert module - added summaries to preflag and convert - exchanged uvaver with uvcat for the whole pipeline - updated default.cfg with the new parameters and one line explanations

--- a/modules/default.cfg
+++ b/modules/default.cfg
@@ -1,54 +1,57 @@
 [INITIAL]
-apercaldir = ''
-fluxcal = ''
-polcal = ''
-target = ''
-basedir = ''
-beam = ''
-rawsubdir = 'raw'
-crosscalsubdir = 'crosscal'
-selfcalsubdir = 'selfcal'
-linesubdir = 'line'
-contsubdir = 'continuum'
-polsubdir = 'polarisation'
-mossubdir = 'mosaics'
-transfersubdir = 'transfer'
+apercaldir = ''                                     # Your apercal directory, e.g. '/home/adebahr/apercal'
+fluxcal = ''                                        # Flux calibrator dataset, e.g. '3C295.MS'
+polcal = ''                                         # Polarised calibrator dataset, e.g. '3C286.MS'
+target = ''                                         # Target dataset, e.g. 'LH_WSRT.MS'
+basedir = ''                                        # Base directory for your data reduction, e.g. '/data/adebahr/apertif/LH_WSRT/'
+beam = ''                                           # Beam number to work on for SELFCAL, CONTINUUM, LINE and POLARISATIOn module, e.g. '00'
+rawsubdir = 'raw'                                   # Sub-directory for raw datasets, e.g. 'raw'
+crosscalsubdir = 'crosscal'                         # Sub-directory for cross calibration, e.g. 'crosscal'
+selfcalsubdir = 'selfcal'                           # Sub-directory for self calibration, e.g. 'selfcal'
+linesubdir = 'line'                                 # Sub-directory for line imaging, e.g. 'line'
+contsubdir = 'continuum'                            # Sub-directory for continuum imaging, e.g. 'continuum'
+polsubdir = 'polarisation'                          # Sub-directory for polarisation imaging, e.g. 'polarisation'
+mossubdir = 'mosaics'                               # Sub-directory for masaicking, e.g. 'mosaics'
+transfersubdir = 'transfer'                         # Sub-directory for the transfer of the final (u,v)-datasets, e.g. 'transfer'
 
 [PREPARE]
-prepare_date = '180817' # Format: YYMMDD
-prepare_obsnum_fluxcal = '001' # Format: NNN
-prepare_obsnum_polcal = '002' # Format: NNN
-prepare_obsnum_target = '003' # Format: NNN
-prepare_target_beams = '00,01' # Format: 'all' for all beams, '' for no target, and 'NN,MM,...' for certain beam numbers
+prepare_date = '180817'                             # Date of the observation, format: YYMMDD, e.g. '180817'
+prepare_obsnum_fluxcal = '001'                      # Observation number of the flux calibrator, format: NNN, e.g. '001'
+prepare_obsnum_polcal = '002'                       # Observation number of the polarised calibrator, format: NNN, e.g. '002'
+prepare_obsnum_target = '003'                       # Observation number of the target, format: NNN, e.g. '003'
+prepare_target_beams = '00,01'                      # Target beam numbers to copy, format: 'all' for all beams, '' for no target, and 'NN,MM,...' for certain beam numbers, e.g. '00,01'
 
 [PREFLAG]
-preflag_manualflag = True
-preflag_manualflag_fluxcal = True
-preflag_manualflag_polcal = False
-preflag_manualflag_target = True
-preflag_manualflag_auto = True
-preflag_manualflag_antenna = ''
-preflag_manualflag_corr = ''
-preflag_manualflag_shadow = True
-preflag_manualflag_baseline = ''
-preflag_manualflag_channel = ''
-preflag_manualflag_time = ''
-preflag_aoflagger = True
-preflag_aoflagger_bandpass = True
-preflag_aoflagger_fluxcal = True
-preflag_aoflagger_polcal = False
-preflag_aoflagger_target = True
-preflag_aoflagger_fluxcalstrat = 'fluxcal.rfis'
-preflag_aoflagger_polcalstrat = ''
-preflag_aoflagger_targetstrat = 'target.rfis'
+preflag_shadow = True                               # Flag all datasets for shadowed antennas
+preflag_edges = True                                # Flag subband egdes for all datasets
+preflag_ghosts = True                               # Flag ghost channels for all datasets
+preflag_manualflag = True                           # Run the manualflag options
+preflag_manualflag_fluxcal = True                   # Run manualflag options for the flux calibrator
+preflag_manualflag_polcal = True                    # Run manualflag options for the polarised calibrator
+preflag_manualflag_target = True                    # Run manualflag options for the target beams
+preflag_manualflag_targetbeams = 'all'              # Targetbeams to flag, options: 'all' or '00,01,02'
+preflag_manualflag_auto = True                      # Flag auto-correlations
+preflag_manualflag_antenna = ''                     # Antennas to flag, e.g. 'RT2,RT3,RT4'
+preflag_manualflag_corr = ''                        # Correlations to flag, e.g. 'XX,YX'
+preflag_manualflag_baseline = ''                    # Flag certai baselines, e.g. 'RT2&RT3,RT5&RT6'
+preflag_manualflag_channel = ''                     # Channels or channel ranges to flag, e.g. '0~3054;10977~16384'
+preflag_manualflag_time = ''                        # Time range to flag, e.g. '09:14:0~09:54:0'
+preflag_aoflagger = True                            # Run the aoflagger step
+preflag_aoflagger_bandpass = True                   # Derive a preliminary bandpass for AOFlagging
+preflag_aoflagger_fluxcal = True                    # AOFlag the flux calibrator
+preflag_aoflagger_polcal = True                     # AOFlag the polarised calibrator
+preflag_aoflagger_target = True                     # AOFlag the target beams
+preflag_aoflagger_targetbeams = 'all'               # Targetbeams to flag, options: 'all' or '00,01,02'
+preflag_aoflagger_fluxcalstrat = 'fluxcal.rfis'     # Flagging strategy for the flux calibrator
+preflag_aoflagger_polcalstrat = 'polcal.rfis'       # Flagging strategy for the polarised calibrator
+preflag_aoflagger_targetstrat = 'target.rfis'       # Flagging strategy for the target beams
 
 [CONVERT]
-convert_ms2uvfits = True
-convert_ms2uvfits_tool_casa_autocorr = False
-convert_uvfits2mir = True
-convert_fluxcal = True
-convert_polcal = False
-convert_target = True
+convert_fluxcal = True                              # Convert the flux calibrator dataset
+convert_polcal = True                               # Convert the polarised calibrator dataset
+convert_target = True                               # Convert the target beam dataset
+convert_targetbeams = 'all'                         # Targetbeams to convert, options: 'all' or '00,01,02'
+convert_removeuvfits = True                         # Remove the UVFITS files
 
 [CROSSCAL]
 crosscal_bandpass = True
