Set default beam to 00 for calibration

--- a/modules/default.cfg
+++ b/modules/default.cfg
@@ -4,7 +4,7 @@ fluxcal = ''                                        # Flux calibrator dataset, e
 polcal = ''                                         # Polarised calibrator dataset, e.g. '3C286.MS'
 target = ''                                         # Target dataset, e.g. 'LH_WSRT.MS'
 basedir = ''                                        # Base directory for your data reduction, e.g. '/data/adebahr/apertif/LH_WSRT/'
-beam = ''                                           # Beam number to work on for SELFCAL, CONTINUUM, LINE and POLARISATIOn module, e.g. '00'
+beam = '00'                                         # Beam number to work on for SELFCAL, CONTINUUM, LINE and POLARISATIOn module, e.g. '00'
 rawsubdir = 'raw'                                   # Sub-directory for raw datasets, e.g. 'raw'
 crosscalsubdir = 'crosscal'                         # Sub-directory for cross calibration, e.g. 'crosscal'
 selfcalsubdir = 'selfcal'                           # Sub-directory for self calibration, e.g. 'selfcal'
