--- a/modules/default.cfg
+++ b/modules/default.cfg
@@ -20,6 +20,7 @@ prepare_obsnum_fluxcal = '001'                      # Observation number of the 
 prepare_obsnum_polcal = '002'                       # Observation number of the polarised calibrator, format: NNN, e.g. '002'
 prepare_obsnum_target = '003'                       # Observation number of the target, format: NNN, e.g. '003'
 prepare_target_beams = '00,01'                      # Target beam numbers to copy, format: 'all' for all beams, '' for no target, and 'NN,MM,...' for certain beam numbers, e.g. '00,01'
+prepare_bypass_alta = False                         # Set to true if you don't want to fetch data from the ALTA archive
 
 [PREFLAG]
 preflag_shadow = True                               # Flag all datasets for shadowed antennas
