tests working a bit better now

--- a/test/test.cfg
+++ b/test/test.cfg
@@ -1,10 +1,10 @@
 [INITIAL]
 apercaldir = '/home/gijs/Work/apercal'              # Your apercal directory, e.g. '/home/adebahr/apercal'
-fluxcal = '3C138.MS'                                # Flux calibrator dataset, e.g. '3C295.MS'
-polcal = '3C138.MS'                                         # Polarised calibrator dataset, e.g. '3C286.MS'
-target = 'NGC807-first100.MS'                       # Target dataset, e.g. 'LH_WSRT.MS'
-basedir = '/scratch/apercal/'                   # Base directory for your data reduction, e.g. '/data/adebahr/apertif/LH_WSRT/'
-beam = '00'                                           # Beam number to work on for SELFCAL, CONTINUUM, LINE and POLARISATIOn module, e.g. '00'
+fluxcal = '3C295.MS'                                # Flux calibrator dataset, e.g. '3C295.MS'
+polcal = '3C138.MS'                                 # Polarised calibrator dataset, e.g. '3C286.MS'
+target = 'NGC807.MS'                                # Target dataset, e.g. 'LH_WSRT.MS'
+basedir = '/scratch/apercal/'                       # Base directory for your data reduction, e.g. '/data/adebahr/apertif/LH_WSRT/'
+beam = '00'                                         # Beam number to work on for SELFCAL, CONTINUUM, LINE and POLARISATIOn module, e.g. '00'
 rawsubdir = 'raw'                                   # Sub-directory for raw datasets, e.g. 'raw'
 crosscalsubdir = 'crosscal'                         # Sub-directory for cross calibration, e.g. 'crosscal'
 selfcalsubdir = 'selfcal'                           # Sub-directory for self calibration, e.g. 'selfcal'
@@ -19,8 +19,8 @@ prepare_date = '180817'                             # Date of the observation, f
 prepare_obsnum_fluxcal = '001'                      # Observation number of the flux calibrator, format: NNN, e.g. '001'
 prepare_obsnum_polcal = '002'                       # Observation number of the polarised calibrator, format: NNN, e.g. '002'
 prepare_obsnum_target = '003'                       # Observation number of the target, format: NNN, e.g. '003'
-prepare_target_beams = '00,01'                      # Target beam numbers to copy, format: 'all' for all beams, '' for no target, and 'NN,MM,...' for certain beam numbers, e.g. '00,01'
-prepare_bypass_alta = True                         # Set to true if you don't want to fetch data from the ALTA archive
+prepare_target_beams = '00,04,17'                   # Target beam numbers to copy, format: 'all' for all beams, '' for no target, and 'NN,MM,...' for certain beam numbers, e.g. '00,01'
+prepare_bypass_alta = True                          # Set to true if you don't want to fetch data from the ALTA archive
 
 [PREFLAG]
 preflag_shadow = True                               # Flag all datasets for shadowed antennas
