--- a/modules/default.cfg
+++ b/modules/default.cfg
@@ -46,18 +46,25 @@ preflag_aoflagger_fluxcalstrat = 'fluxcal.rfis'     # Flagging strategy for the 
 preflag_aoflagger_polcalstrat = 'polcal.rfis'       # Flagging strategy for the polarised calibrator
 preflag_aoflagger_targetstrat = 'target.rfis'       # Flagging strategy for the target beams
 
+[CROSSCAL]
+crosscal_refant = 'RT2'                             # Reference antenna used through all cross calibration steps
+crosscal_tec = False                                # TEC corrections for all datasets
+crosscal_bandpass = True                            # Bandpass correction from the flux calibrator
+crosscal_gains = True                               # Gain and flux corrections for the flux calibrator
+crosscal_global_delay = True                        # Global delay corrections
+crosscal_crosshand_delay = True                     # Cross-hand delay corrections
+crosscal_leakage = True                             # Polarisation leakage corrections
+crosscal_polarisation_angle = True                  # Polarisation angle corrections
+crosscal_transfer_to_cal = True                     # Transfer corrections to calibrators
+crosscal_transfer_to_target = True                  # Transfer corrections to the target fields
+crosscal_transfer_to_target_targetbeams = ''        # Targetbeams to transger the solutions to, options: 'all' or '00,01,02'
+
 [CONVERT]
 convert_fluxcal = True                              # Convert the flux calibrator dataset
 convert_polcal = True                               # Convert the polarised calibrator dataset
 convert_target = True                               # Convert the target beam dataset
 convert_targetbeams = 'all'                         # Targetbeams to convert, options: 'all' or '00,01,02'
 convert_removeuvfits = True                         # Remove the UVFITS files
-
-[CROSSCAL]
-crosscal_bandpass = True
-crosscal_delay = True
-crosscal_polarisation = False
-crosscal_transfer_to_target = True
 
 [SELFCAL]
 selfcal_image_imsize = 2049
