Update tests for new ccal, add main

--- a/test/test.cfg
+++ b/test/test.cfg
@@ -55,9 +55,18 @@ convert_targetbeams = 'all'                         # Targetbeams to convert, op
 convert_removeuvfits = True                         # Remove the UVFITS files
 
 [CROSSCAL]
-crosscal_bandpass = True
-crosscal_delay = True
-crosscal_polarisation = False
+crosscal_refant = 'RT2'                             # Reference antenna used through all cross calibration steps
+crosscal_tec = False                                # TEC corrections for all datasets
+crosscal_bandpass = True                            # Bandpass correction from the flux calibrator
+crosscal_gains = True                               # Gain and flux corrections for the flux calibrator
+crosscal_global_delay = True                        # Global delay corrections
+crosscal_crosshand_delay = True                     # Cross-hand delay corrections
+crosscal_leakage = True                             # Polarisation leakage corrections
+crosscal_polarisation_angle = True                  # Polarisation angle corrections
+crosscal_transfer_to_cal = True                     # Transfer corrections to calibrators
+crosscal_transfer_to_target = True                  # Transfer corrections to the target fields
+crosscal_transfer_to_target_targetbeams = 'all'     # Targetbeams to transfer the solutions to, options: 'all'
+                                                    # or '00,01,02'
 crosscal_transfer_to_target = True
 
 [SELFCAL]
