almost there for cwl

--- a/cwl/Makefile
+++ b/cwl/Makefile
@@ -1,18 +1,21 @@
 
 .PHONY: run 
 
+VENV=$(CURDIR)/../.venv2
+
 data:
 	cd ../data && $(MAKE)
 
-../.venv2:
+$(VENV):
 	virtualenv -p python2 ../.venv2
 
-../.venv2/bin/cwltool: ../.venv2
-	../.venv2/bin/pip install ..
-	../.venv2/bin/pip install -r requirements.txt
+$(VENV)/bin/cwltool: ../.venv2
+	$(VENV)/bin/pip install ..
+	$(VENV)/bin/pip install -r requirements.txt
 
 docker:
 	docker build .. -t apertif/apercal
 
 run: ../.venv2/bin/cwltool data
-	../.venv2/bin/cwltool --enable-ext apercal.cwl --ms ../data/small/00/raw/3C138.MS
+
+	PATH=$(VENV)/bin/:$(PATH) $(VENV)/bin/cwltool --enable-ext --no-container apercal.cwl job.yaml
