--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,6 @@ services:
 install:
   - docker build . -t apertif/apercal
 script:
-  - docker run apertif/apercal pycodestyle apercal --ignore=E501
-  - docker run apertif/apercal pytest test
+  - docker run apertif/apercal pycodestyle apercal --ignore=E501,E127,E741,E122,W504,E126
+  - docker run apertif/apercal pytest test test/test_prepare.py test/test_preflag.py
 
