--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,12 @@ install:
   - docker build . -t apertif/apercal
 script:
   - docker run apertif/apercal pycodestyle apercal --ignore=E501,E127,E741,E122,W504,E126
-  - docker run apertif/apercal pytest test/test_ccal.py test/test_continuum.py test/test_convert.py test/test_preflag.py test/test_prepare.py test/test_transfer.py
+  - docker run apertif/apercal pytest -s test/test_prepare.py
+  - docker run apertif/apercal pytest -s test/test_preflag.py
+  - docker run apertif/apercal pytest -s test/test_ccal.py
+  - docker run apertif/apercal pytest -s test/test_convert.py
+#  - docker run apertif/apercal pytest -s test/test_scal.py
+#  - docker run apertif/apercal pytest -s test/test_continuum.py
+#  - docker run apertif/apercal pytest -s test/test_line.py
+#  - docker run apertif/apercal pytest -s test/test_transfer.py
 
