--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ script:
   - docker run apertif/apercal pytest -s test/test_prepare.py
   - docker run apertif/apercal pytest -s test/test_preflag.py
   - docker run apertif/apercal pytest -s test/test_ccal.py
-  - docker run apertif/apercal pytest -s test/test_convert.py
+#  - docker run apertif/apercal pytest -s test/test_convert.py
 #  - docker run apertif/apercal pytest -s test/test_scal.py
 #  - docker run apertif/apercal pytest -s test/test_continuum.py
 #  - docker run apertif/apercal pytest -s test/test_line.py
