Travis: enable convert test

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ script:
   - docker run -v `pwd`/data:/code/data:rw apertif/apercal pytest -s test/test_prepare.py
   - docker run -v `pwd`/data:/code/data:rw apertif/apercal pytest -s test/test_preflag.py
   - docker run -v `pwd`/data:/code/data:rw apertif/apercal pytest -s test/test_ccal.py
-#  - docker run apertif/apercal pytest -s test/test_convert.py
+  - docker run -v `pwd`/data:/code/data:rw apertif/apercal pytest -s test/test_convert.py
 #  - docker run apertif/apercal pytest -s test/test_scal.py
 #  - docker run apertif/apercal pytest -s test/test_continuum.py
 #  - docker run apertif/apercal pytest -s test/test_line.py
