--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ install:
   - make data/small
   - docker build . -t apertif/apercal
 script:
-  - docker run -v `pwd`/data:/code/data:rw apertif/apercal pycodestyle apercal --ignore=E501,E127,E741,E122,W504,E126
+#  - docker run -v `pwd`/data:/code/data:rw apertif/apercal pycodestyle apercal --ignore=E501,E127,E741,E122,W504,E126
   - docker run -v `pwd`/data:/code/data:rw apertif/apercal pytest -s test/test_prepare.py
   - docker run -v `pwd`/data:/code/data:rw apertif/apercal pytest -s test/test_preflag.py
   - docker run -v `pwd`/data:/code/data:rw apertif/apercal pytest -s test/test_ccal.py
