--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ install:
 script:
 #  - docker run -v `pwd`/data:/code/data:rw apertif/apercal pycodestyle apercal --ignore=E501,E127,E741,E122,W504,E126
   - docker run -v `pwd`/data:/code/data:rw apertif/apercal pytest -s test/test_prepare.py
+#  - docker run -v `pwd`/data:/code/data:rw apertif/apercal pytest -s test/test_prepare_parallel.py
   - docker run -v `pwd`/data:/code/data:rw apertif/apercal pytest -s test/test_preflag.py
   - docker run -v `pwd`/data:/code/data:rw apertif/apercal pytest -s test/test_ccal.py
   - docker run -v `pwd`/data:/code/data:rw apertif/apercal pytest -s test/test_convert.py
