Remove confusing default

--- a/apercal/modules/default.cfg
+++ b/apercal/modules/default.cfg
@@ -17,7 +17,7 @@ transfersubdir = 'transfer'                         # Sub-directory for the tran
 subdirification = True                              # assume data is in /basedir/beamnum/rawsubdir/fluxcal format
 
 [PREPARE]
-prepare_date = '180817'                             # Date of the observation, format: YYMMDD, e.g. '180817'
+prepare_date = None                                 # Date of the observation, format: YYMMDD, e.g. '180817'
 prepare_obsnum_fluxcal = '001'                      # Observation number of the flux calibrator, format: NNN, e.g. '001'
 prepare_obsnum_polcal = '002'                       # Observation number of the polarised calibrator, format: NNN, e.g. '002'
 prepare_obsnum_target = '003'                       # Observation number of the target, format: NNN, e.g. '003'
