Run flip_ra in prepare step

--- a/apercal/modules/default.cfg
+++ b/apercal/modules/default.cfg
@@ -21,6 +21,7 @@ prepare_obsnum_polcal = None                        # Observation number of the 
 prepare_obsnum_target = None                        # Observation number of the target, format: NNN, e.g. '003'
 prepare_target_beams = None                         # Target beam numbers to copy, format: 'all' for all beams, '' for no target, and 'NN,MM,...' for certain beam numbers, e.g. '00,01'
 prepare_bypass_alta = False                         # Set to true if you don't want to fetch data from the ALTA archive
+prepare_flip_ra = False                             # Flip right ascension for old data sets with flipped beam weights
 
 [PREFLAG]
 preflag_shadow = True                               # Flag all datasets for shadowed antennas
