--- a/apercal/modules/default.cfg
+++ b/apercal/modules/default.cfg
@@ -21,7 +21,6 @@ prepare_obsnum_polcal = None                        # Observation number of the 
 prepare_obsnum_target = None                        # Observation number of the target, format: NNN, e.g. '003'
 prepare_target_beams = None                         # Target beam numbers to copy, format: 'all' for all beams, '' for no target, and 'NN,MM,...' for certain beam numbers, e.g. '00,01'
 prepare_bypass_alta = False                         # Set to true if you don't want to fetch data from the ALTA archive
-prepare_flip_ra = False                             # Flip right ascension for old data sets with flipped beam weights
 
 [PREFLAG]
 preflag_shadow = True                               # Flag all datasets for shadowed antennas
@@ -67,7 +66,7 @@ convert_fluxcal = True                              # Convert the flux calibrato
 convert_polcal = True                               # Convert the polarised calibrator dataset
 convert_target = True                               # Convert the target beam dataset
 convert_targetbeams = 'all'                         # Targetbeams to convert, options: 'all' or '00,01,02'
-convert_removeuvfits = False                        # Remove the UVFITS files
+convert_removeuvfits = True                         # Remove the UVFITS files
 
 [SELFCAL]
 selfcal_image_imsize = 3073                         # Image size in pixels
@@ -111,28 +110,36 @@ selfcal_amp_drinit = 30                             # drinit parmeter to calcula
 selfcal_amp_dr0 = 2.0                               # dr0 parameter to calculate dynamcic range limits in major cycles with drinit * np.power(dr0, major cycle), should be the same as for phase calibration
 selfcal_amp_mindr = 5.0                             # minimum dynamic range for masking if calculated thresholds are lower, should be the same as for phase calibration
 selfcal_amp_nsigma = 5                              # Factor to calculate theoretical noise threshold with nsigma * theoretical_noise, should be the same as for phase calibration
-selfcal_amp_uvmin = 0.0                             # Minimum u,v-range to use for amplitude self-calibration during major cylces
-selfcal_amp_uvmax = 3000                            # Maximum u,v-range to use for amplitude self-calibration during major cylces
+selfcal_amp_uvmin = 0.0                             # Minimum u,v-range to use for amplitude self-calibration during major cycles
+selfcal_amp_uvmax = 3000                            # Maximum u,v-range to use for amplitude self-calibration during major cycles
 selfcal_amp_solint = 'auto'                         # Selfcal solution interval for amplitude calibration (e.g. 20) or 'auto' for an automatic calculation
 selfcal_amp_nfbin = 16                              # Number of solution intervals over frequency for amplitude calibration
 selfcal_amp_gaussianity = 1e-2                      # Gaussianity parameter for amplitude residual image to verify amp calibration as good (see scipy.stats.normaltest)
 selfcal_amp_ratio = 1.2                             # Ratio of the dirty image min, max, std before and after amplitude calibration to verify amplitude calibration as good
 
 [CONTINUUM]
-continuum_image_imsize = 2049
-continuum_image_cellsize = 4
-continuum_image_centre = ''
-continuum_image_convolbeam = ''
-continuum_image_robust = ''
-continuum_majorcycle_function = 'square'
-continuum_minorcycle_function = 'square'
-continuum_minorcycle0_dr = 5.0
-continuum_minorcycle = 3
-continuum_c0 = 10.0
-continuum_c1 = 5.0
-continuum_drinit = 50
-continuum_dr0 = 2.0
-continuum_nsigma = 45
+continuum_mfimage = True                            # Multi-frequency continuum imaging
+continuum_mfimage_imsize = 3073                     # Image size in pixels
+continuum_mfimage_cellsize = 4                      # Pixel size in arcseconds
+continuum_mfimage_minorcycle = 5                    # Maximum number of cycles to clean the continuum image before automatic stop
+continuum_mfimage_c1 = 5.0                          # c1 parameter for clean threshold with mask_threshold/c1
+continuum_mfimage_drinc = 10.0                      # Increment for each iteration for the masking using max(residual map)/drinc
+continuum_mfimage_mindr = 10.0                      # Minimum increase in dynamic range for the first cycle (in case calculated DR is lower)
+continuum_mfimage_nsigma = 5                        # Factor to calculate theoretical noise threshold with nsigma * theoretical_noise
+continuum_mf_gaussianity = 1e-2                     # Gaussianity parameter for amplitude residual image to verify amp calibration as good (see scipy.stats.normaltest)
+continuum_chunkimage = True
+continuum_chunkimage_startchannels = [0,32,64,96,128,160,192,224]
+continuum_chunkimage_endchannels = [31,63,95,127,159,191,223,255]
+continuum_chunkimage_imsize = 2049
+continuum_chunkimage_cellsize = 4
+continuum_chunkimage_minorcycle = 5
+continuum_chunkimage_minorcycle_function = 'square'
+continuum_chunkimage_c0 = 10.0
+continuum_chunkimage_c1 = 5.0
+continuum_chunkimage_drinit = 30
+continuum_chunkimage_dr0 = 2.0
+continuum_chunkimage_mindr = 5.0
+continuum_chunkimage_nsigma = 5
 
 [LINE]
 line_splitdata = True
