--- a/apercal/modules/default.cfg
+++ b/apercal/modules/default.cfg
@@ -66,7 +66,7 @@ convert_fluxcal = True                              # Convert the flux calibrato
 convert_polcal = True                               # Convert the polarised calibrator dataset
 convert_target = True                               # Convert the target beam dataset
 convert_targetbeams = 'all'                         # Targetbeams to convert, options: 'all' or '00,01,02'
-convert_removeuvfits = True                         # Remove the UVFITS files
+convert_removeuvfits = False                        # Remove the UVFITS files
 convert_removems = True                             # Remove measurement sets
 
 [SELFCAL]
