Do not flag ghosts

--- a/apercal/modules/default.cfg
+++ b/apercal/modules/default.cfg
@@ -25,7 +25,7 @@ prepare_bypass_alta = False                         # Set to true if you don't w
 [PREFLAG]
 preflag_shadow = True                               # Flag all datasets for shadowed antennas
 preflag_edges = True                                # Flag subband egdes for all datasets
-preflag_ghosts = True                               # Flag ghost channels for all datasets
+preflag_ghosts = False                              # Flag ghost channels for all datasets
 preflag_manualflag = True                           # Run the manualflag options
 preflag_manualflag_fluxcal = True                   # Run manualflag options for the flux calibrator
 preflag_manualflag_polcal = True                    # Run manualflag options for the polarised calibrator
