Disable amplitude selfcal

--- a/apercal/modules/default.cfg
+++ b/apercal/modules/default.cfg
@@ -101,7 +101,7 @@ selfcal_phase_uvmin = [0.0,0.0,0.0]                 # Minimum u,v-range to use f
 selfcal_phase_uvmax = [3000,3000,3000]              # Maximum u,v-range to use for phase self-calibration during major cylces, 1 value per cycle
 selfcal_phase_solint = 'auto'                       # Selfcal solution intervals for each major cycle as a list (e.g. [10,5,3]) or 'auto' for an automatic calculation
 selfcal_phase_nfbin = 16                            # Number of frequency solution intervals
-selfcal_amp = True                                  # Do amplitude calibration, possible values True, False, 'auto'
+selfcal_amp = False                                 # Do amplitude calibration, possible values True, False, 'auto'
 selfcal_amp_auto_limit = 1.0                        # Threshold for the sum of clean components in Jy in the last model to set amp calibration True in auto mode
 selfcal_amp_minorcycle = 3                          # Maximum number of additional minor cycles to create amplitude model
 selfcal_amp_minorcycle_function = 'square'          # Type of function to decrease threshold for minor cycles, possible values: 'square', 'power', 'linear', should be the same as for phase calibration
