- fixed mosaic module to create mf continuum image - updated default.cfg with polarisation and mosaic parameters

--- a/apercal/modules/default.cfg
+++ b/apercal/modules/default.cfg
@@ -174,9 +174,17 @@ line_image_dr0 = 2.0
 line_image_restorbeam = ''
 line_image_convolbeam = ''
 
+[POLARISATION]
+polarisation_qu = True                              # Create Q-/U-images
+polarisation_qu_startsubband = 0                    # First subband to image
+polarisation_qu_endsubband = 383                    # Last subband to image
+polarisation_qu_imsize = 3073                       # Image size of the Q-/U-images
+polarisation_qu_cellsize = 4                        # Cell size of the Q-/U-images
+polarisation_qu_clean_sigma = 1.5                   # Clean threshold factor (sigma*std of map)
+
 [MOSAIC]
-mosaic_continuum_stack = True
-mosaic_continuum_chunks = True
+mosaic_continuum_mf = True
+mosaic_continuum_chunks = False
 mosaic_line = False
 mosaic_polarisation = False
 
